fix(render diff): fixed line cutoff issue in rendering code cell diffs

--- a/style/ghost.css
+++ b/style/ghost.css
@@ -101,6 +101,7 @@
 }
 
 .v-Verdant-GhostBook-cell.markdown {
+    height: 100%;
 }
 
 .v-Verdant-GhostBook-cell.markdown.active {
